<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Notes</string>
    <string name="title_create">New note</string>
    <string name="title_edit">Edit: %1$s</string>
    <string name="timemachine">Time machine</string>
    <string name="time">Time</string>
    <string name="done">Done</string>
    <string name="saved">Saved</string>
    <string name="distance">Distance</string>
    <string name="need_location_help">Long press to set a location</string>
    <string name="near_location">Near</string>
    <string name="menu_add">Add note</string>
    <string name="menu_save_and_add">Save and add note</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_revert">Revert changes</string>
    <string name="menu_copy">@android:string/copy</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_setcompleted">Set done</string>
    <string name="menu_setuncompleted">Set not done</string>
    <string name="menu_deletelist">Delete list</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_share">Share</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_renamelist">Rename list</string>
    <string name="menu_createlist">Start new list</string>
    <string name="menu_clearcompleted">Clear completed</string>
    <string name="menu_setdefaultlist">Set as default list</string>
    <string name="menu_managelists">Edit list</string>
    <string name="add_item">Add item</string>
    <string name="delete_question">Delete?</string>
    <string name="delete_items_message">Are  you sure you want to delete these items?</string>
    <string name="delete_item_message">Are  you sure you want to delete this item?</string>
    <string name="delete_list_message">Are you sure you want to delete the list?</string>
    <string name="editor_due_date_hint">Due date</string>
    <string name="editor_title_hint">Title</string>
    <string name="editor_note_hint">Note</string>
    <string name="resolve_edit">Edit note</string>
    <string name="error_title">Error</string>
    <string name="error_message">Error loading note</string>
    <string name="default_style">Default style</string>
    <string name="show_items_as_tasks">Show items as tasks</string>
    <string name="show_items_as_notes">Show items as notes</string>
    <string name="sort_list_default">Default sort order</string>
    <string name="sort_list_alphabetical">Order alphabetically</string>
    <string name="sort_list_due">Order by due date</string>
    <string name="sort_list_updated">Order by latest updated</string>
    <string name="sort_list_manual">Order manually</string>
    <string name="search_description">Notes and tasks</string>
    <string name="archive">Archive</string>
    <string name="view_deletedtasks">@string/archive</string>
    <string name="location">Location</string>
    <string name="restore">Restore</string>
    <string name="restore_to">Restore to</string>
    <string name="search_hint">Search</string>
    <string name="settings_theme">Current theme</string>
    <string name="settings_theme_dialog">Use theme</string>
    <string name="settings_lang">Language</string>
    <string name="settings_lang_dialog">@string/settings_lang</string>
    <string name="settings_cat_theme">Theme</string>
    <string name="settings_cat_sorting">Sorting</string>
    <string name="settings_sorting_type">Sorting on</string>
    <string name="settings_sorting_type_dialog">Sort on</string>
    <string name="settings_sorting_order">Order</string>
    <string name="settings_sorting_order_dialog">Order by</string>
    <string name="settings_summary_sort_type_alphabetic">Title</string>
    <string name="settings_summary_sort_type_modified">Latest modified</string>
    <string name="settings_summary_sort_type_duedate">Due date</string>
    <string name="settings_summary_sort_type_serverposition">My order</string>
    <string name="settings_summary_theme_black">Black</string>
    <string name="settings_summary_theme_dark">Dark</string>
    <string name="settings_summary_theme_light">Light</string>
    <string name="settings_summary_theme_classic">Classic</string>
    <string name="settings_summary_theme_light_dark_ab">Light with dark action bar</string>
    <string name="settings_cat_appearance">Appearance</string>
    <string name="settings_font_screen">Font settings</string>
    <string name="settings_font_screen_summary">You can change the type and size of the fonts</string>
    <string name="settings_cat_font_editor">Editor</string>
    <string name="settings_font_type">Font</string>
    <string name="settings_font_type_dialog">Select a font</string>
    <string name="settings_font_size">Font size</string>
    <string name="preference_preview_text">This is how the editor text will appear</string>
    <string name="settings_text_preview_title">Preview</string>
    <string name="monospace">Monospace</string>
    <string name="sans">Sans</string>
    <string name="serif">Serif</string>
    <string name="settings_sync_freq_title">Sync type</string>
    <string name="settings_account_title">Select an account</string>
    <string name="settings_account_summary">Click to switch account</string>
    <string name="settings_sync_enable_title">Google Tasks sync</string>
    <string name="settings_sync_enable_summary">Sync notes with your Google account</string>
    <string name="gtasks_sync_info">Not all information can be synced with Google Tasks. Only notes, due date (not time) and todo-status is synced.</string>
    <string name="settings_cat_syncing">Synchronization</string>
    <string name="gtasks">Google Tasks</string>
    <string name="dropbox">Dropbox</string>
    <string name="dropbox_enable">Sync with Dropbox</string>
    <string name="dropbox_enable_summary">Creates a special NoNonsense Notes folder in your Dropbox</string>
    <string name="manual">Manual</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="onehour">One hour</string>
    <string name="oneday">One day</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="show_from_all_lists">All lists</string>
    <string name="default_list_needed_warning">Set a default list first</string>
    <string name="reverted">Reverted changes</string>
    <string name="notecopied">Copied</string>
    <string name="deleted">Deleted</string>
    <string name="repeat">Repeat</string>
    <string name="once">Once</string>
    <string name="always">Always</string>
    <string name="items">notes</string>
    <string name="permission_read_label">read notes and lists</string>
    <string name="permission_read_desc">Allows the application to read your notes and related lists.</string>
    <string name="permission_write_label">modify notes and lists</string>
    <string name="permission_write_desc">Allows the application to insert, update and delete notes and lists.</string>
    <string name="settings_header_list">List settings</string>
    <string name="settings_header_list_summary"></string>
    <string name="settings_header_appearance">@string/settings_cat_appearance</string>
    <string name="settings_header_appearance_summary"></string>
    <string name="settings_header_sync">@string/settings_cat_syncing</string>
    <string name="settings_header_sync_summary"></string>
    <string name="settings_list_dialog">Select a list</string>
    <string name="settings_list">List</string>
    <string name="settings_list_summary"></string>
    <string name="automatic">Automatic</string>
    <string name="preferences_week_start_day_dialog">Week starts on</string>
    <string name="preferences_week_start_day_title">Week starts on</string>
    <string name="select_restore_list">Select the list to restore to</string>
    <string name="drag_to_timetravel">Drag to time travel</string>
    <string name="import_data_question">Import data?</string>
    <string name="import_started">Importing data. This might take a few seconds.</string>
    <string name="import_data_msg">Would you like to import the notes from the donate version? When finished, you are given the option to uninstall it also.</string>
	<string name="imported_result">Imported %1$d notes in %2$d lists</string>
	<string name="import_error">Something went wrong: %s</string>
	<string name="uninstall_donate_msg">Press OK to uninstall the donate version.</string>
	<string name="uninstall_donate">Uninstall old version?</string>
    <plurals name="notecopied_msg">
        <item quantity="one">@string/notecopied_one</item>
        <item quantity="other">@string/notecopied_other</item>
    </plurals>
    <plurals name="notedeleted_msg">
        <item quantity="one">@string/notedeleted_one</item>
        <item quantity="other">@string/notedeleted_other</item>
    </plurals>
    <plurals name="mode_choose">
        <item quantity="one">@string/selected_one</item>
        <item quantity="other">@string/selected_other</item>
    </plurals>
    <string name="move">Move</string>
    <string name="move_to">Move to</string>
    <string name="moved_x_to">Moved %d to</string>
    <string name="lock_note">Lock note</string>
    <string name="unlock_note">Unlock note</string>
    <string name="locked">Locked</string>
    <string name="unlocked">Unlocked</string>
    <string name="password_required">Password required</string>
    <string name="select_account">Select an account</string>
    <string name="password">Password</string>
    <string name="password_set">Password set</string>
    <string name="password_cleared">Password cleared</string>
    <string name="passwords_dont_match">Passwords do not match</string>
    <string name="password_incorrect">Password incorrect</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="apply">Apply</string>
    <string name="clear_password">Clear password</string>
    <string name="password_info">Locking a note limits access to viewing and modifying it. You lock notes on an individual basis. The notes are only protected here and remain fully accessible on other devices.</string>
    <string name="about">About</string>
    <string name="sync_failed">Sync failed</string>
    <string name="sync_login_failed">Login failed, could not connect to Google Tasks</string>
    <string name="changelog_full_title">Change log</string>
    <string name="changelog_title">What\'s new</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">Show full</string>
    <string name="widget_pref_preview_note">Show note preview</string>
    <string name="widget_pref_preview_note_summary_off">Title will be 2 lines</string>
    <string name="widget_pref_preview_note_summary_on">Note will be on 2nd line</string>
    <string name="widget_pref_show_complete">Mark as done button</string>
    <string name="widget_pref_show_complete_summary_off">Button will be hidden</string>
    <string name="widget_pref_show_complete_summary_on">Button will be visible</string>
    <string name="settings_listitem">Two line titles</string>
    <string name="hide_checkbox">Hide checkbox</string>
    <string name="hide_date">Hide due date</string>
    <string name="item_max_height">Max height of notes/tasks</string>
    <string name="donate">Donate</string>
    <string name="hide_header">Hide entire widget header</string>
    <string name="transparency">Transparency</string>
    <string name="shortcut_help1">If checked, the shortcut will create a new note in the selected list and open the editor. If unchecked, the shortcut will open the selected list.</string>
    <string name="reminders">Reminders</string>
    <string name="add_reminder">Add reminder</string>
</resources>