<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_clearcompleted"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/menu_clearcompleted"/>
    <item
        android:id="@+id/menu_managelists"
        android:orderInCategory="301"
        android:showAsAction="never"
        android:title="@string/menu_managelists">
        <menu>
            <item
                android:id="@+id/menu_setdefaultlist"
                android:orderInCategory="1"
                android:showAsAction="never"
                android:title="@string/menu_setdefaultlist"/>
            <item
                android:id="@+id/menu_renamelist"
                android:orderInCategory="3"
                android:showAsAction="never"
                android:title="@string/menu_renamelist"/>
            <item
                android:id="@+id/menu_deletelist"
                android:orderInCategory="4"
                android:showAsAction="never"
                android:title="@string/menu_deletelist"/>
        </menu>
    </item>

</menu>