<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/menu_search"
          android:title="@string/search_hint"
          android:icon="?action_search"
          android:showAsAction="ifRoom|collapseActionView"
          android:actionViewClass="android.widget.SearchView"
          android:orderInCategory="200"/> 
          
    <item
        android:id="@+id/menu_createlist"
        android:orderInCategory="201"
        android:showAsAction="never"
        android:title="@string/menu_createlist"/>
    
    <item
        android:id="@+id/menu_sync"
        android:icon="?navigation_refresh"
        android:orderInCategory="202"
        android:showAsAction="never"
        android:title="@string/menu_sync"/>
    
    <item
        android:id="@+id/menu_donate"
        android:showAsAction="never"
        android:orderInCategory="998"
        android:title="@string/donate"/>

</menu>