<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_delete"
        android:icon="?content_discard"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_delete">
    </item>
    <item
        android:id="@+id/menu_revert"
        android:icon="?content_undo"
        android:orderInCategory="101"
        android:showAsAction="ifRoom"
        android:title="@string/menu_revert"/>
    <item
        android:id="@+id/menu_share"
        android:icon="?social_share"
        android:orderInCategory="102"
        android:showAsAction="ifRoom"
        android:title="@string/menu_share"
        android:actionProviderClass="android.widget.ShareActionProvider" />
    <item
        android:id="@+id/menu_timemachine"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/timemachine"/>

</menu>