<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    tools:context=".ShortcutConfig" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
           android:layout_marginTop="2dp"
           android:layout_marginBottom="2dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/settings_list"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
        android:textColor="?android:attr/textColorPrimary" />

    <Spinner
        android:id="@+id/listSpinner"
        style="?android:attr/spinnerStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_min_size"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textView1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
           android:layout_marginTop="2dp"
           android:layout_marginBottom="2dp"
        android:prompt="@string/settings_list_dialog"
        android:spinnerMode="dropdown"
        tools:listitem="@android:layout/simple_spinner_dropdown_item" />

 <!--    <CheckBox
        android:id="@+id/createNoteCheckbox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_min_size"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/listSpinner"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:checked="true"
        android:text="@string/title_create"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
        android:textColor="?android:attr/textColorPrimary" /> -->

       <Switch
           android:id="@+id/noteSwitch"
           android:layout_width="match_parent"
           android:layout_height="@dimen/list_item_min_size"
           android:layout_alignParentLeft="true"
           android:layout_below="@id/listSpinner"
           android:layout_marginLeft="16dp"
           android:layout_marginRight="16dp"
           android:layout_marginTop="2dp"
           android:layout_marginBottom="2dp"
           android:text="@string/title_create"
           android:textAppearance="@android:style/TextAppearance.Holo.Medium"
           android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noteSwitch"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
           android:layout_marginTop="2dp"
           android:layout_marginBottom="2dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/shortcut_help1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/textView2"
        android:background="?android:attr/dividerHorizontal" />

    <Button
        android:id="@+id/ok"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:text="@string/ok" />

</RelativeLayout>