<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_widget_conf_wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:isScrollContainer="true"
    android:scrollbars="vertical"
    tools:context="com.nononsenseapps.notepad.widget.ListWidgetConfig" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="4dp"
        tools:context="com.nononsenseapps.notepad.widget.ListWidgetConfig" >

        <Spinner
            android:id="@+id/listSpinner"
            style="?android:attr/spinnerStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_height="@dimen/list_item_min_size"
            android:prompt="@string/settings_list_dialog"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/sortingSpinner"
            style="?android:attr/spinnerStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_height="@dimen/list_item_min_size"
            android:entries="@array/sorting_preference"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/list_widget_config_theme"
            style="?android:attr/spinnerStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_height="@dimen/list_item_min_size"
            android:entries="@array/widget_theme_preference"
            android:spinnerMode="dropdown" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:labelFor="@+id/itemRowsSeekBar"
            android:paddingLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/transparency"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="normal" />

        <SeekBar
            android:id="@+id/transparencySeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:max="100"
            android:progress="75" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:labelFor="@+id/itemRowsSeekBar"
            android:paddingLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/item_max_height"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="normal" />

        <SeekBar
            android:id="@+id/itemRowsSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:max="10"
            android:progress="3" />

        <CheckBox
            android:id="@+id/hideCheckBox"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/list_item_min_size"
            android:text="@string/hide_checkbox"
            android:textAppearance="@android:style/TextAppearance.Holo.Large"
            android:textColor="@android:color/primary_text_dark" />

        <CheckBox
            android:id="@+id/hideDateCheckBox"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/list_item_min_size"
            android:text="@string/hide_date"
            android:textAppearance="@android:style/TextAppearance.Holo.Large"
            android:textColor="@android:color/primary_text_dark" />

        <CheckBox
            android:id="@+id/transparentHeaderCheckBox"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/list_item_min_size"
            android:text="@string/hide_header"
            android:textAppearance="@android:style/TextAppearance.Holo.Large"
            android:textColor="@android:color/primary_text_dark" />

        <LinearLayout
            android:id="@+id/spacer"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
        </LinearLayout>

        <!-- <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/dialog_ok_cancel" /> -->
    </LinearLayout>

</ScrollView>