<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res/com.nononsenseapps.notepad"
    android:id="@+id/fragment_task_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/editor_side_margin"
    android:layout_marginRight="@dimen/editor_side_margin"
    android:fillViewport="@bool/fillEditor" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/editor_vertical_margin"
        android:background="?editorBackgroundColor"
        android:paddingBottom="@dimen/editor_vertical_margin_bottom"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        tools:context=".TaskDetailFragment" >

        <com.nononsenseapps.utils.views.StyledEditText
            android:id="@+id/taskText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:fontFamily="sans-serif"
            android:hint="@string/editor_note_hint"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?textColorPrimary"
            android:layout_marginTop="@dimen/editor_vertical_margin"
            android:visibility="visible"
            custom:linkify="true"
            custom:titleFontFamily="robotocondensed"
            custom:titleFontStyle="bold"
            custom:titleRelativeSize="1.3" />

        <!-- DUE DATE SECTION -->

        <RelativeLayout
            android:id="@+id/dueSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/taskText"
            android:layout_marginTop="16dp"
            android:paddingLeft="8dp" >

            <TextView
                android:id="@+id/dueHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="4dp"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="0dp"
                android:text="@string/editor_due_date_hint"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?textColorSecondary" />

            <com.nononsenseapps.ui.DelegateFrame
                xmlns:nononsenseapps="http://nononsenseapps.com"
                android:id="@+id/checkboxcontainer"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/dueHeader"
                android:clickable="true"
                nononsenseapps:enlargedView="@+id/taskCompleted" >

                <CheckBox
                    android:id="@+id/taskCompleted"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_centerInParent="true"
                    android:gravity="center" />
            </com.nononsenseapps.ui.DelegateFrame>

            <!-- android:background="?btn_default_selector" -->

            <ImageButton
                android:id="@+id/dueCancelButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignBottom="@+id/taskCompleted"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/dueHeader"
                android:src="?attr/body_remove" />

            <Button
                android:id="@+id/dueDateBox"
                style="?android:attr/spinnerStyle"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_alignBottom="@+id/taskCompleted"
                android:layout_below="@+id/dueHeader"
                android:layout_toLeftOf="@+id/dueCancelButton"
                android:layout_toRightOf="@+id/checkboxcontainer"
                android:fontFamily="sans-serif-light"
                android:hint="@string/editor_due_date_hint"
                android:paddingLeft="16dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>
        
        <TextView
                android:id="@+id/notificationAdd"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:clickable="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/dueSection"
                android:layout_alignWithParentIfMissing="true"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="8dp"
                android:drawableRight="?attr/body_new"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:paddingRight="16dp"
                android:text="@string/reminders"
        		android:background="?android:attr/selectableItemBackground"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?textColorSecondary" />

            <LinearLayout
                android:id="@+id/notificationList"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/notificationAdd"
                android:layout_marginBottom="0dp"
                android:paddingLeft="16dp"
                android:layout_marginTop="4dp"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/notificationAddBak"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/notificationList"
                android:orientation="horizontal"
                android:visibility="gone" >

                <!--
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="#0000"
                        android:clickable="false"
                        android:src="@drawable/content_new_light" />
                -->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:background="#0000"
                    android:clickable="false"
                    android:drawableLeft="?attr/body_new"
                    android:drawablePadding="8dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:paddingRight="20dp"
                    android:text="@string/add_reminder"
                    android:textAllCaps="true"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="?attr/labelAddItemTextColor"
                    android:textStyle="bold" />
            </LinearLayout>
    </RelativeLayout>

</ScrollView>